<resources>
    <string name="app_name">Hometask3 RecyclerView</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_second_name">Enter second name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="save">SAVE</string>
</resources>